# DSP-SMQT

./: .gitignore  README.md  dsp_smqt.sln
dsp_smqt/: CMakeLists.txt  Image.cpp  Image.h  adspImage.cpp  adspImage.h  blue.csv  dsp_smqt.sln  dsp_smqt.vcxproj  dsp_smqt.vcxproj.filters  green.csv  main.cpp  picture003.jpgbrightness0.csv  picture003.jpgbrightness1.csv  toptal.pngbrightness0.csv  toptal.pngbrightness1.csv  toptal.pngbrightness2.csv  toptal.pngcontrast0.csv  toptal.pngcontrast1.csv  toptal.pngcontrast2.csv
dsp_smqt/dsp_smqt/: dsp_smqt.vcxproj  dsp_smqt.vcxproj.filters
dsp_smqt/test_results/: brightness2.csv
